Add coverage step on CI. Add uninstall testing for venv. Add optional pre-commit dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ test = [
   "pytest",
   "pytest-cov"
 ]
+pre-commit = [
+  "pre-commit"
+]
 
 [tool.hatch.version]
 path = "env_manager/__about__.py"
