--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Install env-manager and test dependencies
         run: |
         python -m pip install -e .[test]
+      - name: Install Micromamba and setup as executable backend
+        working-directory: ${{ github.workspace }}/spyder
+        run: |
+          wget -qO- https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba
+          echo "ENV_BACKEND_EXECUTABLE=${{ github.workspace }}/spyder/bin/mamba" >> $GITHUB_ENV
       - name: Run tests
         run: |
         pytest --cov=env_manager -vv
