--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,17 +24,21 @@ jobs:
            auto-update-conda: true
            channels: conda-forge
            python-version: ${{ matrix.python-version }}
-      - name: Install env-manager and test dependencies
-        run: |
-        python -m pip install -e .[test]
+           environment-file: requirements/environment.yml
+           auto-activate-base: false
       - name: Install Micromamba and setup as executable backend
-        working-directory: ${{ github.workspace }}/spyder
+        shell: bash -l {0}
         run: |
           wget -qO- https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba
-          echo "ENV_BACKEND_EXECUTABLE=${{ github.workspace }}/spyder/bin/mamba" >> $GITHUB_ENV
-      - name: Run tests
+          echo "ENV_BACKEND_EXECUTABLE=${{ github.workspace }}/bin/micromamba" >> $GITHUB_ENV
+      - name: Install env-manager
+        shell: bash -l {0}
         run: |
-        pytest --cov=env_manager -vv
+          pip install -e .
+      - name: Run tests
+        shell: bash -l {0}
+        run: |
+          pytest --cov=env_manager -vv
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
