--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
-          pytest --cov=env_manager -vv
+          pytest --cov-report xml --cov=env_manager -vv
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
