--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
-          pytest --cov-report xml --cov=env_manager -vv
+          pytest --cov-report xml --cov=env_manager -vv -x
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
