Handle conda vs micromamba case to export envs. Add jobs testing with conda as ENV_BACKEND_EXECUTABLE

--- a/.github/workflows/linux-tests.yml
+++ b/.github/workflows/linux-tests.yml
@@ -5,15 +5,16 @@ on: [pull_request, push]
 
 jobs:
   tests:
-    name: Test Python ${{ matrix.python-version }}
+    name: Test Python ${{ matrix.python-version }} Executable ${{ matrix.conda-like }}
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     env:
       PYTHON_VERSION: ${{ matrix.python-version }}
     strategy:
       fail-fast: false
       matrix:
         python-version: ['3.7', '3.10']
+        conda-like: ['micromamba', 'conda']
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
@@ -26,10 +27,16 @@ jobs:
            environment-file: requirements/environment.yml
            auto-activate-base: false
       - name: Install Micromamba and setup as executable backend
+        if: ${{matrix.conda-like == 'micromamba'}}
         shell: bash -l {0}
         run: |
           curl -Ls https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj bin/micromamba
           echo "ENV_BACKEND_EXECUTABLE=${{ github.workspace }}/bin/micromamba" >> $GITHUB_ENV
+      - name: Setup executable backend with conda
+        if: ${{matrix.conda-like == 'conda'}}
+        shell: bash -l {0}
+        run: |
+          echo "ENV_BACKEND_EXECUTABLE=$CONDA/condabin/conda" >> $GITHUB_ENV
       - name: Install env-manager
         shell: bash -l {0}
         run: |
