Add description info for listed packages when returning programatically

--- a/requirements/environment.yml
+++ b/requirements/environment.yml
@@ -4,6 +4,9 @@ dependencies:
   # Build dependencies
   - hatch
 
+  # Installation dependencies
+  - requests
+
   # For autoformat with Black
   - pre-commit
 
