Add attribute to keep track of packages which installation was actually requested when listing them

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,10 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
-dependencies = ["requests"]
+dependencies = [
+  "pyyaml",
+  "requests"
+]
 dynamic = ["version"]
 
 [project.urls]
