Conda: Remove code that it's not needed with a more recent conda version
Also, add `packaging` as a new dependency to be able to compare package
versions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,9 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = [
+  "packaging",
   "pyyaml",
-  "requests"
+  "requests",
 ]
 dynamic = ["version"]
 
