--- a/requirements/environment.yml
+++ b/requirements/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   # Installation dependencies
   - pyyaml
   - requests
+  - packaging
 
   # For autoformat with Black
   - pre-commit
@@ -14,3 +15,4 @@ dependencies:
   # For testing
   - pytest
   - pytest-cov
+  - flaky
